<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chefatrun.MainContentScreen" >

    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/action_signout"
        app:showAsAction="never"/>
  <item
        android:id="@+id/basket_actionbar"
        android:orderInCategory="100"
        android:title="@string/action_basket"
        app:actionLayout="@layout/actionbar_menu_item_basket"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/filter2_actionbar"
        android:orderInCategory="100"
        android:icon="@drawable/filtering1_1"
        android:title="@string/action_filter_list"
        app:showAsAction="ifRoom">
        
               <menu>
          <item 
            android:id="@+id/action_dropdown1"
            android:title="@string/dropdown_1" />
          <item 
            android:id="@+id/action_dropdown2"
            android:title="@string/dropdown_2" />
          <item 
            android:id="@+id/action_dropdown3"
            android:title="@string/dropdown_3" />
        </menu>
    </item>

</menu>
