<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/mainview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@null"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="Precise. Pre-portioned. Perfect."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/aboutusgreenladle"

                />



        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:text="Why Green Ladle ?"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus1"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aboutus2"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus3"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />



        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stampgreenladle"
        android:layout_gravity="center"
        />
</LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- The navigation drawer -->

    <fragment
        android:id="@+id/left_drawer"
        android:name="exousia.greenladle.NavigationDrawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:layout="@layout/left_drawer_list"
        tools:layout="@layout/left_drawer_list" />

</android.support.v4.widget.DrawerLayout>
