<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mainview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/customer_support_heading"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dull_grey"
                    android:textSize="13dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="201dp"
                        android:layout_height="201dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/customer2" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/customer_support_email_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dull_grey"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/Email_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_border"
                    android:text="EMAIL US"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/customer_support_second_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dull_grey"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/Callus_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_border"
                    android:text="Call Us"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <fragment
        android:id="@+id/left_drawer"
        android:name="exousia.greenladle.NavigationDrawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:layout="@layout/left_drawer_list"
        tools:layout="@layout/left_drawer_list" />

</android.support.v4.widget.DrawerLayout>